layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun__contract_preamble_with_pronouns.snap
---
source: layered-contracts/src/tests/pronoun.rs
expression: "test_pronouns(r#\"ABC Corporation (the \"Company\") and John Doe (the \"Contractor\") enter this Agreement. The Company shall pay the Contractor. It shall remit payment monthly.\"#)"
---
ABC     Corporation     (  the     "  Company  "  )     and     John     Doe     (  the     "  Contractor  "  )     enter     this     Agreement  .     The     Company     shall     pay     the     Contractor  .     It     shall     remit     payment     monthly  .
                                                                                                                                                                            ╰───╯Shall
                                                                                                                                                                                                                               ╰───╯Shall
                        ╰─────────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: Parenthetical }, conf: 0.90)
                                                                                 ╰────────────────────────────╯Scored(DefinedTerm { term_name: "Contractor", definition_type: Parenthetical }, conf: 0.90)
                                                                                                                                                                ╰─────╯Scored(TermReference { term_name: "Company", definition_type: Parenthetical }, conf: 0.95)
                                                                                                                                                                                                      ╰────────╯Scored(TermReference { term_name: "Contractor", definition_type: Parenthetical }, conf: 0.95)
                                                                                                                              ╰──╯Scored(PronounReference { pronoun: "this", pronoun_type: Relative, candidates: [AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 45, confidence: 0.75 }, AntecedentCandidate { text: "Contractor", is_defined_term: true, token_distance: 31, confidence: 0.75 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 55, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "Corporation", is_defined_term: false, token_distance: 53, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "and", is_defined_term: false, token_distance: 43, confidence: 0.45000000000000007 }] }, conf: 0.55)
                                                                                                                                                                                                                        ╰╯Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 45, confidence: 0.75 }, AntecedentCandidate { text: "Contractor", is_defined_term: true, token_distance: 31, confidence: 0.75 }, AntecedentCandidate { text: "Contractor", is_defined_term: true, token_distance: 12, confidence: 0.7100000000000001 }, AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 20, confidence: 0.65 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 55, confidence: 0.45000000000000007 }] }, conf: 0.55)
