layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun__no_antecedents.snap
---
source: layered-contracts/src/tests/pronoun.rs
expression: "test_pronouns(\"It shall deliver goods.\")"
---
It     shall     deliver     goods  .
       ╰───╯Shall
