layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun__no_pronouns.snap
---
source: layered-contracts/src/tests/pronoun.rs
expression: "test_pronouns(r#\"\"Company\" means ABC Corp. The Company shall deliver.\"#)"
---
"  Company  "     means     ABC     Corp  .     The     Company     shall     deliver  .
                  ╰───╯Means
                                                                    ╰───╯Shall
╰─────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: QuotedMeans }, conf: 0.95)
                                                        ╰─────╯Scored(TermReference { term_name: "Company", definition_type: QuotedMeans }, conf: 0.95)
