layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun__pronoun_after_defined_term.snap
---
source: layered-contracts/src/tests/pronoun.rs
expression: "test_pronouns(r#\"\"Company\" means ABC Corp. It shall deliver goods.\"#)"
---
"  Company  "     means     ABC     Corp  .     It     shall     deliver     goods  .
                  ╰───╯Means
                                                       ╰───╯Shall
╰─────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: QuotedMeans }, conf: 0.95)
                                                ╰╯Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 14, confidence: 0.77 }, AntecedentCandidate { text: "Corp", is_defined_term: false, token_distance: 10, confidence: 0.44999999999999996 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 12, confidence: 0.41000000000000003 }, AntecedentCandidate { text: "means", is_defined_term: false, token_distance: 14, confidence: 0.37 }] }, conf: 0.57)
