layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun__pronoun_after_parenthetical.snap
---
source: layered-contracts/src/tests/pronoun.rs
expression: "test_pronouns(r#\"John Doe (the \"Contractor\") agrees. It shall comply.\"#)"
---
John     Doe     (  the     "  Contractor  "  )     agrees  .     It     shall     comply  .
                                                                         ╰───╯Shall
                 ╰────────────────────────────╯Scored(DefinedTerm { term_name: "Contractor", definition_type: Parenthetical }, conf: 0.90)
                                                                  ╰╯Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Contractor", is_defined_term: true, token_distance: 10, confidence: 0.75 }, AntecedentCandidate { text: "John", is_defined_term: false, token_distance: 20, confidence: 0.35 }, AntecedentCandidate { text: "Doe", is_defined_term: false, token_distance: 18, confidence: 0.35 }] }, conf: 0.75)
