layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun__pronoun_before_definition.snap
---
source: layered-contracts/src/tests/pronoun.rs
expression: "test_pronouns(r#\"It exists. \"Company\" means ABC Corp.\"#)"
---
It     exists  .     "  Company  "     means     ABC     Corp  .
                                       ╰───╯Means
                     ╰─────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: QuotedMeans }, conf: 0.95)
