layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun__pronoun_defined_term_vs_noun.snap
---
source: layered-contracts/src/tests/pronoun.rs
expression: "test_pronouns(r#\"ABC Corp (the \"Company\") owns equipment. It shall be maintained.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     owns     equipment  .     It     shall     be     maintained  .
                                                                                  ╰───╯Shall
                 ╰─────────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: Parenthetical }, conf: 0.90)
                                                                           ╰╯Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 14, confidence: 0.77 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 24, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "Corp", is_defined_term: false, token_distance: 22, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "equipment", is_defined_term: false, token_distance: 10, confidence: 0.44999999999999996 }] }, conf: 0.57)
