layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun__pronoun_different_sentence.snap
---
source: layered-contracts/src/tests/pronoun.rs
expression: "test_pronouns(r#\"The Company shall deliver. It must comply with regulations.\"#)"
---
The     Company     shall     deliver  .     It     must     comply     with     regulations  .
                    ╰───╯Shall
                                                    ╰──╯Shall
                                             ╰╯Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Company", is_defined_term: false, token_distance: 16, confidence: 0.35 }] }, conf: 0.35)
