layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun__pronoun_he_masculine.snap
---
source: layered-contracts/src/tests/pronoun.rs
expression: "test_pronouns(r#\"John Doe (the \"Consultant\") agrees. He shall provide services.\"#)"
---
John     Doe     (  the     "  Consultant  "  )     agrees  .     He     shall     provide     services  .
                                                                         ╰───╯Shall
                 ╰────────────────────────────╯Scored(DefinedTerm { term_name: "Consultant", definition_type: Parenthetical }, conf: 0.90)
                                                                  ╰╯Scored(PronounReference { pronoun: "He", pronoun_type: ThirdSingularMasculine, candidates: [AntecedentCandidate { text: "Consultant", is_defined_term: true, token_distance: 12, confidence: 0.7100000000000001 }, AntecedentCandidate { text: "John", is_defined_term: false, token_distance: 22, confidence: 0.35 }, AntecedentCandidate { text: "Doe", is_defined_term: false, token_distance: 20, confidence: 0.35 }] }, conf: 0.71)
