layered-contracts/src/tests/snapshots/layered_contracts__tests__pronoun__pronoun_multiple_defined_terms.snap
---
source: layered-contracts/src/tests/pronoun.rs
expression: "test_pronouns(r#\"ABC Corp (the \"Company\") and XYZ Inc (the \"Vendor\") agree. It shall deliver.\"#)"
---
ABC     Corp     (  the     "  Company  "  )     and     XYZ     Inc     (  the     "  Vendor  "  )     agree  .     It     shall     deliver  .
                                                                                                                            ╰───╯Shall
                 ╰─────────────────────────╯Scored(DefinedTerm { term_name: "Company", definition_type: Parenthetical }, conf: 0.90)
                                                                         ╰────────────────────────╯Scored(DefinedTerm { term_name: "Vendor", definition_type: Parenthetical }, conf: 0.90)
                                                                                                                     ╰╯Scored(PronounReference { pronoun: "It", pronoun_type: ThirdSingularNeuter, candidates: [AntecedentCandidate { text: "Vendor", is_defined_term: true, token_distance: 10, confidence: 0.85 }, AntecedentCandidate { text: "Company", is_defined_term: true, token_distance: 24, confidence: 0.75 }, AntecedentCandidate { text: "ABC", is_defined_term: false, token_distance: 34, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "Corp", is_defined_term: false, token_distance: 32, confidence: 0.45000000000000007 }, AntecedentCandidate { text: "and", is_defined_term: false, token_distance: 22, confidence: 0.45000000000000007 }] }, conf: 0.65)
